#54 - Fix checkbox alignment in embedded markdown

--- a/design-vault/.obsidian/themes/Deep Work.css
+++ b/design-vault/.obsidian/themes/Deep Work.css
@@ -630,6 +630,9 @@ body .markdown-source-view.mod-cm6 .markdown-embed .markdown-preview-view {
 body .markdown-source-view.mod-cm6 .markdown-embed .markdown-embed-link {
   top: calc((1rem * 2) * 1);
 }
+body .markdown-source-view.mod-cm6 .markdown-embed .task-list-item-checkbox {
+  top: -1px;
+}
 
 body .markdown-preview-view p {
   line-height: 1.5;
